# django-lineup

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  codecov.yml  db.sqlite3  pyproject.toml  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml
docs/: conf.py  index.rst  installation.rst  lineup.migrations.rst  lineup.rst  management_commands.rst  modules.rst  templatetags.rst  usage.rst
lineup/: admin.py  apps.py  exceptions.py  forms.py  managers.py  models.py  urls.py  views.py
lineup/management/commands/: import_menu_from_json.py
lineup/migrations/: 0001_initial.py  0002_auto_20201213_0856.py  0003_menuitem_extras.py  0004_auto_20210425_1839.py
lineup/templates/admin/lineup/menuitem/: change_list.html
lineup/templates/lineup/: breadcrumbs.html  menu.html
lineup/templatetags/: lineup_tags.py
tests/: README.md  settings.py  test_admin.py  test_commands.py  test_models.py  test_templatetags.py  test_views.py  urls.py
tests/example/: urls.py
tests/templates/: home.html  test.html
